Fixed spacing

--- a/app/uploader/[slug]/upload/page.module.css
+++ b/app/uploader/[slug]/upload/page.module.css
@@ -10,12 +10,13 @@
   margin: 0 auto;
 }
 
-.form > div > * {
+/* .form > div > * {
   margin-block-end: 1rem;
-}
+} */
 
 .label {
   font-weight: 700;
+  margin-block-end: 1rem;
 }
 
 .input,
@@ -29,6 +30,10 @@
 .checkbox {
   display: flex;
   gap: 1rem;
+}
+
+.checkbox > input[type="checkbox"] {
+  transform: scale(1.2);
 }
 
 .button {
